--- a/css/styleTree.css
+++ b/css/styleTree.css
@@ -131,3 +131,16 @@ body {
   left: 0%;
   }
 }
+
+ .h{
+  text-align: center;
+  font-size: 150px;
+}
+button{
+  margin:auto;
+  width: 150px;
+  height: 50px;
+  background-color: #FF9F55;
+  color: #000;
+  font-size: 20px;
+}
