--- a/css/styleActivity.css
+++ b/css/styleActivity.css
@@ -1,4 +1,4 @@
-*{
+/* *{
     box-sizing: border-box;
 }
 
@@ -48,18 +48,18 @@ header section ul li a{
 
 main {
     line-height: 1.5;
-    /* text-align: center; */
+
 }
 
 h1 {
     text-align: center;
-    /* width: 100px; */
+
     text-transform: capitalize;
 }
 
 h3 {
     text-align: center;
-    /* width: 30px; */
+
     text-transform: capitalize;
     color: rgba(51, 46, 46, 0.356);
 }
@@ -79,7 +79,7 @@ img {
 }
 
 iframe {
-    /* display: inline; */
+
     align-items: center;
     width: 50%;
     outline: #000000 solid 3px;
@@ -91,13 +91,13 @@ iframe {
 
 input {
     background: #000;
-    /* padding: 10 px; */
+ 
     color: #ddd;
     width: 300px;
-    /* align-items: right; */
+
     height: 100px;
     text-transform: capitalize;
-    /* float:right; */
+
     font-size: 30px;
     border-radius: 8px;
     margin: 30px auto;
@@ -108,7 +108,7 @@ footer  ul li {
     display: inline;
     list-style: none;
     float: left;
-    /* padding: 5px; */
+
     width: 70px;
     }
 footer{
@@ -123,9 +123,226 @@ footer b{
         float: right;
         margin-right: 50px;
         padding: auto;
-        /* padding-right: 30px; */
+
 }
 footer img {
         padding-left: 10px;
         width: 70px;
+} */
+
+*{
+    box-sizing: border-box;
+}
+body{
+    width: 100%;
+    margin: auto;
+    height: max-content;
+    display: grid;
+  }
+  header {
+    display: grid;
+    align-items: center;
+    grid-row: 1 /2;
+    grid-column: 1 / -1;
+  }
+  header section{
+    padding: 10px;
+    margin-top: 100px;
+  }
+  header img {
+    height: 150px;
+    width: 150px;
+    margin: 0px 0px 0px 40px;
+  }
+  header section ul {
+    FONT-WEIGHT: 700;
+    text-align: center;
+    margin-top: -190px;
+  }
+  header section ul li {
+    display: inline;
+    padding: 20px;  
+    margin-top: 100px;
+    text-transform: uppercase;
+  }
+  header section ul li a{
+    color:black;
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    font-family: Georgia, serif;
+    text-shadow: 3px 2px 3px #6E6E6E;
+}
+main {
+    grid-row: 1 /3;
+    grid-column: 1 / -1;
+  }
+  main .hero-image {
+  background-image: url("../assets/img/heroimg.jpg");
+  height: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  z-index: -1;
+  filter: brightness(40%);
+  }
+.mainItem {
+    margin-top: 200px;
+  }
+  .mainItem h1{
+    text-align: center;
+    color:#fff ;
+    font-size: 100px;
+    text-shadow:  0px 1px 0px #222020;
+    margin-bottom: 20px;
+    margin-top:  -700px;
+    z-index: -1;
+  }
+  .mainpar{
+    padding: 20px 200px;
+    margin-bottom: 135px;
+  }
+  .mainpar h3{
+    text-align: center;
+    color:black ;
+    font-size: 25px;
+  }
+  .mainpar p{
+  text-align: center;
+  font-size: 18px;
+  color: #FFF7F7;
+  font-weight: normal;
+  font-style: italic;
+  padding: 0px 150px;
+  }
+.about {
+    background-color: rgb(241, 253, 255);
+    margin-top: 350px;
+    padding-left: 50px;
+    /* margin-right: 130px; */
+    box-shadow: 9px 2px 26px -9px rgba(0,0,0,0.58);
+    height: 420px;
+    z-index: -1;
+}
+.secfounder {
+  height: 400px;
+  margin-top: 300px;
+  padding-top: 30px;
+}
+.vision {
+    width: 30%;
+}
+.vision h1 {
+    font-size: 40px;
+}
+.about1 {
+    background-color: rgb(241, 253, 255);
+    margin-top: 250px;
+    padding-left: 50px;
+    margin-right: 440px;
+    box-shadow: 9px 2px 26px -9px rgba(0,0,0,0.58);
+    height: 420px;
+    z-index: -1;
+}
+.secfounder1 {
+  height: 400px;
+  margin-top: 200px;
+  padding-top: 30px;
+}
+.vision1 {
+    width: 30%;
+}
+.vision1 h1 {
+    font-size: 40px;
+}
+iframe{
+    margin-top: 25px;
+    margin-left: 150px;
+    width: 500px;
+    height: 300px;
+}
+.div1{
+    float: right;
+    margin-top: -420px;
+    margin-right: 240px;
+    box-shadow: 9px 2px 26px -9px rgba(0,0,0,0.58);
+}
+.activityimg{
+    margin-right: 50px;
+    margin-top: -650px;
+    float: right;
+    width: 380px;
+}
+.renderimg{
+    width: auto;
+    height: auto;
+}
+.jordan {
+    margin-right: 50px;
+    margin-top: -650px;
+    float: right;
+    transform: scaleX(-1);
+    width: 780px;
+    opacity: .8;
+}
+button {
+    display: inline-block;
+    padding: 15px 25px;
+    font-size: 24px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: #313131;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 1px 5px #999;
+    margin-top: 20px;
+  }
+button:hover {background-color: #BD1D45}
+button:active {
+  background-color: #BD1D45;
+  box-shadow: 1px 5px #666;
+  transform: translateY(4px);
+}
+.button1 {
+    display: inline-block;
+    padding: 35px 45px;
+    font-size: 24px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: #313131;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 1px 5px #999;
+    margin-top: 100px;
+    margin-left: 500px;
+  }
+.button1:hover {background-color: #BD1D45}
+.button1:active {
+  background-color: #BD1D45;
+  box-shadow: 1px 5px #666;
+  transform: translateY(4px);
+}
+footer{
+    text-align: center;
+    display: block;
+    color: #fff;
+    margin-top: 820px;
+    background-color: #6E6E6E;
+}
+.footericon {
+    float: left;
+    list-style: none;
+    margin-top: 40px;
+    margin-left: 20px;
+    margin-right:20px;
+}
+footer b{
+  margin-left: -140px
 }
