--- a/css/styleForm.css
+++ b/css/styleForm.css
@@ -1,4 +1,4 @@
-*{
+/* *{
     box-sizing: border-box;}
 body{
     width: 100%;
@@ -69,14 +69,14 @@ main h3 {
 }
 .main{
     background-color: lightgray;
-    /* display: inline-flex; */
+
     margin: auto;
     text-align: center;
     height: 900px;
     width: 700px;
     padding: 70px;
     font-size: 20px;
-    /* padding-top: 100px; */
+
     
 }
 form {
@@ -96,14 +96,10 @@ a {
     text-decoration: none;
     color: black;
 }
-/* #tripForm {
-    align-items: center;
-} */
+
 
 #time {
-    /* width: 25%;
-    height: 30px;
-    margin-left: 40%; */
+
     width: 75%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -147,4 +143,210 @@ input.n2 {
   width: 30px;
   height: 20px;
     
+} */
+
+*{
+    box-sizing: border-box;}
+    body{
+        width: 100%;
+        margin: auto;
+        height: max-content;
+        display: grid;
+      }
+      header {
+        display: grid;
+        align-items: center;
+        grid-row: 1 /2;
+        grid-column: 1 / -1;
+      }
+      header section{
+        padding: 10px;
+        margin-top: 100px;
+      }
+      header img {
+        height: 150px;
+        width: 150px;
+        margin: 0px 0px 0px 40px;
+      }
+      header section ul {
+        FONT-WEIGHT: 700;
+        text-align: center;
+        margin-top: -190px;
+      }
+      header section ul li {
+        display: inline;
+        padding: 20px;  
+        margin-top: 100px;
+        text-transform: uppercase;
+      }
+      header section ul li a{
+        color:black;
+        text-decoration: none;
+        color: black;
+        font-size: 20px;
+        font-family: Georgia, serif;
+        text-shadow: 3px 2px 3px #6e6e6e;
+    }
+    main {
+        grid-row: 1 /3;
+        grid-column: 1 / -1;
+      }
+main .hero-image {
+    background-color: rgb(255, 224, 127);
+  height: 800px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  z-index: -2;
+  }
+h1{
+    font-weight: bolder;
+    text-align: center;
+    text-transform: capitalize;
+    font-size: smaller;
+    margin-top: 800px;
 }
+main h3 {
+    font-weight: normal;
+    font-size: x-large;
+    text-transform: capitalize;
+    text-align: center;
+    height: 60px;
+}
+.main{
+    background-color:rgb(116,200,244);
+    /* display: inline-flex; */
+    margin: auto;
+    text-align: center;
+    height: 1300px;
+    padding: 70px 100px;
+    font-size: 20px;
+    border-radius: 50px;
+    width: 900px;
+}
+form {
+    margin-top: 100px;
+}
+label {
+    font-size: xx-large;
+}
+main{
+    font:  4em sans-serif;
+}
+a {
+    text-decoration: none;
+    color: black;
+}
+/* #tripForm {
+    align-items: center;
+} */
+#time {
+    /* width: 25%;
+    height: 30px;
+    margin-left: 40%; */
+    width: 75%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-size: x-large;
+}
+#budget {
+    width: 75%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-size: x-large;
+}
+.n1 {
+    font-size: x-large;
+    text-transform: capitalize;
+}
+#radioButton {
+    text-align: left;
+    padding-left: 120px;
+}
+.p1 {
+    font-size: xx-large;
+    text-transform: capitalize;
+    font-weight: 550;
+}
+.p2 {
+    font-size: x-large;
+}
+input.n2 {
+  width: 30px;
+  height: 20px;
+}
+input.submitBut {
+    display: inline-block;
+    padding: 15px 50px;
+    font-size: 24px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: #615d5e;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 1px 5px #999;
+    margin-left: 150px;
+}
+.heroimg{
+    margin: -600px 420px;   
+}
+.main img {
+    border-radius: 200px 200px 200px 200px; 
+}
+input.submitBut:hover {background-color: #615d5e}
+input.submitBut:active {
+  background-color: #383435;
+  box-shadow: 1px 5px #4f5455a6;
+  transform: translateY(4px);
+}
+footer{
+    text-align: center;
+    display: block;
+    color: #fff;
+    margin-top: 50px;
+    background-color: #6e6e6e;
+    height: 120px;
+}
+.footericon {
+    float: left;
+    list-style: none;
+    margin-top: 40px;
+    margin-left: 20px;
+    margin-right:20px;
+}
+footer b{
+  margin-left: -140px
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
