--- a/css/styleTree.css
+++ b/css/styleTree.css
@@ -1,19 +1,17 @@
 * {
   box-sizing: border-box;
 }
-
 body {
-  background-color: #474e5d;
+  background-color: rgb(255, 224, 127);
   font-family: Helvetica, sans-serif;
 }
-
 /* The actual timeline (the vertical ruler) */
 .timeline {
   position: relative;
-  max-width: 1200px;
-  margin: 0 auto;
+  max-width: 900px;
+  margin-top: 100px;
+  margin:auto;
 }
-
 /* The actual timeline (the vertical ruler) */
 .timeline::after {
   content: '';
@@ -25,15 +23,14 @@ body {
   left: 50%;
   margin-left: -3px;
 }
-
 /* Container around content */
 .container {
   padding: 10px 40px;
   position: relative;
   background-color: inherit;
   width: 50%;
+  opacity: .9;
 }
-
 /* The circles on the timeline */
 .container::after {
   content: '';
@@ -47,17 +44,14 @@ body {
   border-radius: 50%;
   z-index: 1;
 }
-
 /* Place the container to the left */
 .left {
   left: 0;
 }
-
 /* Place the container to the right */
 .right {
   left: 50%;
 }
-
 /* Add arrows to the left container (pointing right) */
 .left::before {
   content: " ";
@@ -71,7 +65,6 @@ body {
   border-width: 10px 0 10px 10px;
   border-color: transparent transparent transparent white;
 }
-
 /* Add arrows to the right container (pointing left) */
 .right::before {
   content: " ";
@@ -85,12 +78,10 @@ body {
   border-width: 10px 10px 10px 0;
   border-color: transparent white transparent transparent;
 }
-
 /* Fix the circle for containers on the right side */
 .right::after {
   left: -16px;
 }
-
 /* The actual content */
 .content {
   padding: 20px 30px;
@@ -98,21 +89,18 @@ body {
   position: relative;
   border-radius: 6px;
 }
-
 /* Media queries - Responsive timeline on screens less than 600px wide */
 @media screen and (max-width: 600px) {
   /* Place the timelime to the left */
   .timeline::after {
   left: 31px;
   }
-  
   /* Full-width containers */
   .container {
   width: 100%;
   padding-left: 70px;
   padding-right: 25px;
   }
-  
   /* Make sure that all arrows are pointing leftwards */
   .container::before {
   left: 60px;
@@ -120,27 +108,127 @@ body {
   border-width: 10px 10px 10px 0;
   border-color: transparent white transparent transparent;
   }
-
   /* Make sure all circles are at the same spot */
   .left::after, .right::after {
   left: 15px;
   }
-  
   /* Make all right containers behave like the left ones */
   .right {
   left: 0%;
   }
 }
-
- .h{
+h2 { font-size: 18px;
+background-color: rgb(217, 226, 255);
+width: fit-content;
+padding: 10px;
+border-radius: 46px 46px 46px 46px;
+}
+.mygif {
+text-align: center;
+}
+.h {
+  font-size: 100px;
+text-align: center;
+color:rgb(8, 0, 20);
+text-shadow: 3px 1px 2px rgba(0,0,0,0.35);
+letter-spacing: 4px;
+}
+  footer{
   text-align: center;
-  font-size: 150px;
+  display: block;
+  color: #fff;
+  margin-top: 50px;
+  background-color: #6e6e6e;
+  height: 120px;
 }
-button{
-  margin:auto;
+.footericon {
+  float: left;
+  list-style: none;
+  margin-top: 40px;
+  margin-left: 20px;
+  margin-right:20px;
+}
+footer b{
+margin-left: -140px
+}
+.heroimg {
+  margin-left: 300px;
+}
+h2 { font-size: 18px;
+background-color: rgb(217, 226, 255);}
+.mygif {
+text-align: center;
+}
+header {
+  display: grid;
+  align-items: center;
+  grid-row: 1 /2;
+  grid-column: 1 / -1;
+}
+header section{
+  padding: 10px;
+  margin-top: 100px;
+}
+header img {
+  height: 150px;
   width: 150px;
-  height: 50px;
-  background-color: #FF9F55;
-  color: #000;
-  font-size: 20px;
+  margin: 0px 0px 0px 40px;
 }
+header section ul {
+  FONT-WEIGHT: 700;
+  text-align: center;
+  margin-top: -190px;
+}
+header section ul li {
+  display: inline;
+  padding: 20px;  
+  margin-top: 100px;
+  text-transform: uppercase;
+}
+header section ul li a{
+  color:black;
+  text-decoration: none;
+  color: black;
+  font-size: 20px;
+  font-family: Georgia, serif;
+  text-shadow: 3px 2px 3px #6e6e6e;
+} 
+ 
+main {
+  grid-row: 1 /3;
+  grid-column: 1 / -1;
+}
+main .hero-image {
+background-color: rgb(255, 224, 127);
+height: 800px;
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+position: relative;
+z-index: -1;
+}
+.heroimg{
+  margin: -600px 420px;   
+}
+
+
+
+
+
+
+
+Message Farah Alwahaibi
+
+
+
+
+
+
+
+
+
+
+
+
+
+
