--- a/css/styleForm.css
+++ b/css/styleForm.css
@@ -1,63 +1,75 @@
 *{
     box-sizing: border-box;}
-body{
-    width: 100%;
-    margin: auto;
-    height: max-content;
-}
 
-  header {
-    display: grid;
-    grid-template-columns: 100px 1fr;
-    align-items: center;
-    grid-row: 1 /2;
+    body{
+        width: 100%;
+        margin: auto;
+        height: max-content;
+        display: grid;
+      }
+    
+    
+     
+      header {
+        display: grid;
+        align-items: center;
+        grid-row: 1 /2;
+        grid-column: 1 / -1;
+      }
+      
+      header section{
+        padding: 10px;
+        margin-top: 100px;
+      }
+     
+      header img {
+        height: 150px;
+        width: 150px;
+        margin: 0px 0px 0px 40px;
+      }
+      header section ul {
+       
+        FONT-WEIGHT: 700;
+        text-align: center;
+        margin-top: -190px;
+      }
+      header section ul li {
+        display: inline;
+        padding: 20px;  
+        margin-top: 100px;
+        text-transform: uppercase;
+      }
+      header section ul li a{
+        color:black;
+        text-decoration: none;
+        color: black;
+        font-size: 20px;
+        font-family: Georgia, serif;
+        text-shadow: 3px 2px 3px #6e6e6e;
+    }
+
+    main {
+        grid-row: 1 /3;
+        grid-column: 1 / -1;
+      }
+
+main .hero-image {
+    background-color: rgb(255, 224, 127);
+  height: 800px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  z-index: -2;
+  
   }
-header img {
-    float: left;
-    padding: 30px 70px;
-}
-header section ul {
-    margin: 0 0 0 70% ;
-}
-header section ul li {
-    display: inline;
-    padding: 30px 3px;  
-    text-transform: uppercase;
-}
-header section ul li a{
-    color:black;
-    text-decoration: none;
-}
 
-footer  ul li {
-    display: inline;
-    list-style: none;
-    float: left;
-    padding: 5px;
-}
-footer{
-    height: 130px;
-    text-align: center;
-    padding-top: 15px;
-        
-}
-footer  ul li img{
-    padding: auto; 
-        
-} 
-footer b{
-    float: right;
-    margin-right: 50px;
-    padding: auto;
-}
-footer img {
-    padding-left: 10px;
-}
 h1{
     font-weight: bolder;
     text-align: center;
     text-transform: capitalize;
     font-size: smaller;
+    margin-top: 800px;
 }
 main h3 {
 
@@ -68,16 +80,15 @@ main h3 {
     height: 60px;
 }
 .main{
-    background-color: lightgray;
+    background-color:rgb(116,200,244);
     /* display: inline-flex; */
     margin: auto;
     text-align: center;
-    height: 900px;
-    width: 700px;
-    padding: 70px;
+    height: 1300px;
+    padding: 70px 100px;
     font-size: 20px;
-    /* padding-top: 100px; */
-    
+    border-radius: 50px;
+    width: 900px;
 }
 form {
     margin-top: 100px;
@@ -85,9 +96,8 @@ form {
 label {
     font-size: xx-large;
 }
-img {
-    z-index: +2;
-}
+
+
 main{
 
     font:  4em sans-serif;
@@ -141,10 +151,64 @@ a {
 .p1 {
     font-size: xx-large;
     text-transform: capitalize;
+    font-weight: 550;
 }
 
+.p2 {
+    font-size: x-large;
+}
 input.n2 {
   width: 30px;
   height: 20px;
     
+}
+
+input.submitBut {
+    display: inline-block;
+    padding: 15px 50px;
+    font-size: 24px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: #615d5e;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 1px 5px #999;
+    margin-left: 150px;
+}
+.heroimg{
+    margin: -600px 420px;   
+}
+.main img {
+    border-radius: 200px 200px 200px 200px; 
+}
+
+input.submitBut:hover {background-color: #615d5e}
+
+input.submitBut:active {
+  background-color: #383435;
+  box-shadow: 1px 5px #4f5455a6;
+  transform: translateY(4px);
+}
+
+footer{
+    text-align: center;
+    display: block;
+    color: #fff;
+    margin-top: 50px;
+    background-color: #6e6e6e;
+    height: 120px;
+    
+}
+.footericon {
+    float: left;
+    list-style: none;
+    margin-top: 40px;
+    margin-left: 20px;
+    margin-right:20px;
+}
+footer b{
+  margin-left: -140px
 }
