--- a/css/styleActivity.css
+++ b/css/styleActivity.css
@@ -273,6 +273,8 @@ iframe{
     margin-top: -650px;
     float: right;
     width: 380px;
+    height: 380px;
+    object-fit: cover;
 }
 .renderimg{
     width: auto;
