--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -1,266 +1,228 @@
 *{
-    box-sizing: border-box;}
-
+  box-sizing: border-box;
+}
 body{
-    width: 100%;
-    margin: auto;
-    height: max-content;
-    display: grid;
-
+  width: 100%;
+  margin: auto;
+  height: max-content;
+  display: grid;
 }
-
-.container {
-    display: grid;
-    grid-template-rows: 100px minmax(calc(100vh - 170px) , 1fr) 50px;
-    gap: 10px;
-    grid-column: 1fr;
-  }
-
-
-  header {
-    display: grid;
-    grid-template-columns: 100px 1fr;
-    align-items: center;
-    grid-row: 1 /2;
-    grid-column: 1 / -1;
-  }
+header {
+  display: grid;
+  align-items: center;
+  grid-row: 1 /2;
+  grid-column: 1 / -1;
+}
+header section{
+  padding: 10px;
+  margin-top: 100px;
+}
 header img {
-    float: left;
-    padding: 30px 70px;
-
+  height: 150px;
+  width: 150px;
+  margin: 0px 0px 0px 40px;
 }
-
 header section ul {
-    margin: 0 0 0 70% ;
+  FONT-WEIGHT: 700;
+  text-align: center;
+  margin-top: -190px;
 }
-
 header section ul li {
-    display: inline;
-    padding: 30px 3px;  
-    text-transform: uppercase;
-    
+  display: inline;
+  padding: 20px;  
+  margin-top: 100px;
+  text-transform: uppercase;
 }
 header section ul li a{
-    color:black;
-    text-decoration: none;
-
+  color:black;
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+  font-family: Georgia, serif;
+  text-shadow: 3px 2px 3px #6e6e6e;
 }
-
-main {
+h3 {
+  font-size: 35px;
+}
+.mainItem {
+  margin-top: 200px;
+}
+ p{
+    font-size: 20px;
+    text-align: center;
+}
+.mainItem h1{
+  text-align: center;
+  color:#fff ;
+  font-size: 100px;
+  text-shadow:  0px 1px 0px #222020;
+  margin-bottom: 20px;
+  margin-top:  -800px;
+  z-index: -1;
+  margin-left: 500px;
+}
+.mainpar{
+  padding: 20px 330px;
+  margin-bottom: 160px;
+}
+.mainpar h3{
+  text-align: center;
+  color:black ;
+  font-size: 25px;
+}
+.mainpar p{
+text-align: center;
+font-size: 18px;
+color: #fff7f7;
+font-weight: normal;
+font-style: italic;
+margin-left: 170px;
+}
+.container {
+  margin-top: 300px;
+}
+  main {
     grid-row: 1 /3;
     grid-column: 1 / -1;
-    /* height: max; */
-
-
-}
-
-/* main .hero-image {
-background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("photographer.jpg");
-height: 60%;
-background-position: center;
-background-repeat: no-repeat;
-background-size: cover;
-position: relative;
-}
-
-
-main .hero-text {
-    text-align: center;
-    position: absolute;
-    top: 30%;
-    left: 10%;
-    transform: translate(-30%, -50%);
-    color:black;
-    height: 50px;
-      overflow-y:scroll hidden ;
   }
- .hero-text p {
-    transform: translate(10%);
-      
-      
-  } */
-
+  main .hero-video {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  z-index: -1;
+  }
+  .button {
+      display: inline-block;
+      padding: 15px 25px;
+      font-size: 24px;
+      cursor: pointer;
+      text-align: center;
+      text-decoration: none;
+      outline: none;
+      color: #fff;
+      background-color: #6e6e6e;
+      border :none;
+      box-shadow: 1px 3px #999;
+      margin-top: 20px;
+  }
+    .button:hover {background-color: #6e6e6e}
+    .button:active {
+      background-color: #6e6e6e;
+      transform: translateY(4px);
+    }
 main h1 {
-    padding-bottom: 50px;
-    margin-left: 70px;
-    text-transform: capitalize;
-    text-align: center;
-    float: left;
-    margin-top: -520px;
-    width: 700px;
-    font-size: 40px;
+  padding-bottom: 50px;
+  margin-left: 70px;
+  text-transform: capitalize;
+  text-align: center;
+  float: left;
+  margin-top: -520px;
+  width: 700px;
+  font-size: 40px;
+  font-weight: bolder;
+  color: white;
+  z-index: 1;
 }
 .p2{
-    padding-bottom: 50px;
-    margin-left: 70px;
-    text-transform: capitalize;
-    text-align: center;
-    float: left;
-    margin-top: -400px;
-    font-size: 25px;
-    width: 700px;
+  padding-bottom: 50px;
+  margin-left: 70px;
+  text-transform: capitalize;
+  text-align: center;
+  float: left;
+  margin-top: -700px;
+  font-size: 25px;
+  width: 700px;
 }
-
 .hpeek {
-    width: 100%;
-    text-align: center;
-    text-transform: capitalize;
-    font-size: xx-large;
+  width: 100%;
+  text-align: center;
+  text-transform: capitalize;
+  font-size: xx-large;
 }
 .p1 {
-    text-align: center;
+  text-align: center;
 }
-    
 main a button {
-    height: 50px;
-    width: 200px;
-    margin: 22px 0;
-    background-color: rgb(0, 0, 0);
-    text-transform: capitalize;
-    color: white;
-    font-size: 20px;
-
-    
+  height: 50px;
+  width: 200px;
+  margin: 22px 0;
+  background-color: rgb(164 107 74 / 88%);
+  text-transform: capitalize;
+  color: white;
+  font-size: 20px;
 }
-/* .butt {
-    margin-top: -500px;
-} */
-
-  footer  ul li {
-    display: inline;
-    list-style: none;
-    float: left;
-        padding: 5px;
+  video {
+      z-index: -1;
+      margin-top: -70px;
+      filter: brightness(45%);
+  }
+  .mySlides {display: none;
+  }
+  .mySlides img {
+       z-index: -1;
+       height: 320px;
+      }
+  /* Slideshow container */
+  .slideshow-container {
+    position: relative;
+    margin-left: 400px;
+    z-index: -1;
+  }
+  /* Fading animation */
+  .fade {
+      -webkit-animation-name: fade;
+      -webkit-animation-duration: 1.5s;
+      animation-name: fade;
+      animation-duration: 1.5s;
     }
-    footer{
-        height: 130px;
+    @-webkit-keyframes fade {
+      from {opacity: .4} 
+      to {opacity: 1}
+    }
+    @keyframes fade {
+      from {opacity: .4} 
+      to {opacity: 1}
+    }
+    /* On smaller screens, decrease text size */
+    @media only screen and (max-width: 300px) {
+      .text {font-size: 11px}
+    }
+    .second {
+      margin-left: 50;
+  padding: 50px;
+  display: flex;
+  MARGIN-TOP: -380px;
+  float: left; 
+    }
+    main section div {
+        float: left;
+        margin: 5.5px;
+        text-transform: capitalize;
         text-align: center;
-        padding-top: 15px;
-        
     }
-    footer  ul li img{
-        padding: auto;
-    }
-  
-    footer b{
-        float: right;
-        margin-right: 50px;
-        padding: auto;
-        /* padding-right: 30px; */
-    }
-    footer img {
-        padding-left: 10px;
-    }
-    video {
-        padding: 30px 50px;
-        
-        
-
-    }
-
-    .mySlides {display: none;
-    width: 100%;}
-    .mySlides img {
-        width: 100%;
-         z-index: -1;
-         opacity: 0.5;
-         height: 836px;
-         
-        }
-    
-    /* Slideshow container */
-    .slideshow-container {
-      max-width: 100%;
-      position: relative;
-      margin-left: 20px;
-      z-index: -1;
-    
-    }
-    /* Fading animation */
-    .fade {
-        -webkit-animation-name: fade;
-        -webkit-animation-duration: 1.5s;
-        animation-name: fade;
-        animation-duration: 1.5s;
-      }
-      
-      @-webkit-keyframes fade {
-        from {opacity: .4} 
-        to {opacity: 1}
-      }
-      
-      @keyframes fade {
-        from {opacity: .4} 
-        to {opacity: 1}
-      }
-      
-      /* On smaller screens, decrease text size */
-      @media only screen and (max-width: 300px) {
-        .text {font-size: 11px}
-      }
-
-    
-      .second {
-        padding: 50px;
-        display: flex;
-      }
-
-      main section div {
-          float: left;
-          /* padding: 20px; */
-          margin: 5.5px;
-          text-transform: capitalize;
-          text-align: center;
-      }
 img{    
-    padding: 10px;          
-   }
-
-   /* .Slider p{
-       float: left;
-   } */
- /* .review {
-    padding: 45px 45px;
-    width: 100%;
-    position: relative;
-      margin-left: 20px;
-      z-index: -1;
-}   
-.colomn1{
-    float:left;
-    width: 45%;
-    /* padding-right: 59px; */
-/* }   
-.colomn2{
-    float:right;
-    width: 45%;
-    /* padding-right: 59px; */
- /* }  
-      */
-
- /* .Slider{    
-    width: 100%;
-    margin: auto;
-    overflow: hidden;
-    display: flex;
-    }
-.Slider ul {    
-    list-style: none;
-    padding: 0px;
-    position: relative;
-    animation: sliding 20s ease-in-out infinite;
-    }
-
-
-
-.Slider ul li {    
-    float: left;
-    display: inline;
+  padding: 10px; 
+  border-radius: 30px;         
+ }
+footer{
+  text-align: center;
+  display: block;
+  color: #fff;
+ padding-bottom: 10px;
+  background-color: #6e6e6e;
+}
+.footericon {
+  float: left;
+  list-style: none;
+  margin-top: 40px;
+  padding-left: 25px
+}
+.footericon img {
+  padding-right: 0px;
+  padding-left: 0px;
+}
+footer b{
+margin-left: -140px
 }
 
-@keyframes sliding {    
-    0%  {left: 0;}    
-    50% {left: -714px;}    
-    75% {left:-1428px;}   
-       
-} */
