--- a/css/styleTree.css
+++ b/css/styleTree.css
@@ -2,7 +2,6 @@
   box-sizing: border-box;
 }
 body {
-  background-color: rgb(255, 224, 127);
   font-family: Helvetica, sans-serif;
 }
 /* The actual timeline (the vertical ruler) */
@@ -11,13 +10,14 @@ body {
   max-width: 900px;
   margin-top: 100px;
   margin:auto;
+      padding-top: 50px;
 }
 /* The actual timeline (the vertical ruler) */
 .timeline::after {
   content: '';
   position: absolute;
   width: 6px;
-  background-color: white;
+  background-color: rgb(217 226 255);
   top: 0;
   bottom: 0;
   left: 50%;
@@ -63,7 +63,7 @@ body {
   right: 30px;
   border: medium solid white;
   border-width: 10px 0 10px 10px;
-  border-color: transparent transparent transparent white;
+  border-color: transparent transparent transparent rgb(217 226 255);
 }
 /* Add arrows to the right container (pointing left) */
 .right::before {
@@ -76,7 +76,7 @@ body {
   left: 30px;
   border: medium solid white;
   border-width: 10px 10px 10px 0;
-  border-color: transparent white transparent transparent;
+  border-color: transparent rgb(217 226 255) transparent transparent;
 }
 /* Fix the circle for containers on the right side */
 .right::after {
@@ -85,7 +85,7 @@ body {
 /* The actual content */
 .content {
   padding: 20px 30px;
-  background-color: white;
+  background-color:  rgb(217 226 255);
   position: relative;
   border-radius: 6px;
 }
@@ -124,7 +124,8 @@ padding: 10px;
 border-radius: 46px 46px 46px 46px;
 }
 .mygif {
-text-align: center;
+  text-align: center;
+  margin-top: -650px;
 }
 .h {
   font-size: 100px;
@@ -151,13 +152,11 @@ letter-spacing: 4px;
 footer b{
 margin-left: -140px
 }
-.heroimg {
-  margin-left: 300px;
-}
 h2 { font-size: 18px;
-background-color: rgb(217, 226, 255);}
+background-color: rgb(255, 224, 127);}
 .mygif {
 text-align: center;
+margin-top: -750px;
 }
 header {
   display: grid;
@@ -193,34 +192,28 @@ header section ul li a{
   font-family: Georgia, serif;
   text-shadow: 3px 2px 3px #6e6e6e;
 } 
- 
 main {
   grid-row: 1 /3;
   grid-column: 1 / -1;
 }
 main .hero-image {
-background-color: rgb(255, 224, 127);
-height: 800px;
-background-position: center;
-background-repeat: no-repeat;
-background-size: cover;
-position: relative;
-z-index: -1;
+  background-color: rgb(255, 224, 127);
+  height: 900px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* position: relative; */
+  z-index: -1;
+  margin-top: -400px;
+  margin-bottom: 100px;
 }
 .heroimg{
   margin: -600px 420px;   
+} 
+a, a:visited, a:hover, a:active {
+  color: inherit;
+  text-decoration: none;
 }
-
-
-
-
-
-
-
-Message Farah Alwahaibi
-
-
-
 
 
 
