--- a/css/styleMedical-Tourism.css
+++ b/css/styleMedical-Tourism.css
@@ -180,7 +180,7 @@ article h3 {
     grid-column: 1 / -1;
   }
   main .hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/img/deadSea.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/img/DeadSea.jpg");
   height: 50%;
   background-position: center;
   background-repeat: no-repeat;
